--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,8 @@
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
-    "react-youtube": "^10.1.0",
+    "shaka-player": "^4.11.7",
     "swiper": "^11.1.14",
-    "video-react": "^0.16.0",
-    "video.js": "^8.18.1",
     "webvtt-parser": "^2.2.0"
   },
   "devDependencies": {
