--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,13 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "lucide-react": "^0.452.0",
     "perfect-scrollbar": "^1.5.5",
+    "plyr": "^3.7.8",
+    "plyr-react": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
+    "screenfull": "^6.0.2",
     "shaka-player": "^4.11.7",
     "swiper": "^11.1.14",
     "webvtt-parser": "^2.2.0"
