--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.13.0",
     "screenfull": "^6.0.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
